--- a/exercício.html
+++ b/exercício.html
@@ -11,16 +11,18 @@
     </header>
     <main>
         <form>
-            <label for="name">Nome</label>
-            <input id="name" type="name" />
+             <label for="name">Nome</label>
+            <input id="name" type="text" />
             <br />
             <label for="email">E-mail</label>
             <input id="email" type="email" />
             <br />
             <label for="senha">Senha</label>
-            <input id="senha" type="senha" />
+            <input id="senha" type="password" />
+            <button type="submit">
+                Cadastrar
+            </button>
         </form>
-    </main>
 </header>
 </body>
 </html>
